--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 body {
-  background-color: dimgray;
+  background-color: black;
+  color: orangered;
+  font-size: 25;
+}
+
+.main-header {
+  color: white;
+}
+
+.cool {
+  color: red;
+}
+.cool {
+  text-align: center;
+}
+
+.main-header {
+  text-align: center;
+}
+
+.queen {
+  text-align: center;
 }
