--- a/style.css
+++ b/style.css
@@ -1,76 +1,70 @@
 body {
   background-color:black
-  color:white
   font-family: "Oswald", sans-serif;
   text-align: center;
   font-size: 40px;
-}
-
-.image {
-  background-image: url(queen.jpg);
-  margin-top: 50px;
-}
-
-.body {
-  text-align: center;
-  font-family: "Oswald", sans-serif;
-  font-size: 40px;
-}
-
-.link {
-  text-align: center;
-  margin-top: 50px;
 }
 
 .text3 {
-  padding-bottom: 10px;
-  border-radius: 20px;
+  padding-bottom: 50px;
+  border-radius: 10px;
+  border-color: black;
   margin-right: auto;
-  border: 20px solid black;
   color: blueviolet;
-  font-family: "Oswald", sans-serif;
   font-size: 40px;
-  background-color: black;
-
+  width: fit-content;
+  text-align: center;
 }
 
 .paragraph {
   margin: auto;
   padding: 5px;
-  length:
+  border-radius: 1px;
+  width: fit-content;
+  text-align: center;
 }
 
 .paragraph2 {
   margin: auto;
   padding: 5px;
-  length: 80px; 
+  border-radius: 1px;
+  width: fit-content;
+  text-align: center;
 }
 
 .paragraph3 {
-  margin: auto;
+  margin-bottom: auto;
   padding: 5px;
   border-radius: 1px;
+  width: fit-content;
+  text-align: center;
 }
 
 .text2 {
   padding-bottom: 10px;
   border-radius: 20px;
   margin-top: auto;
-  border: 20px solid black;
   color: blueviolet;
   font-family: "Oswald", sans-serif;
   font-size: 40px;
-  background-color: black;
+  text-align: center;
 }
 
 .text {
   padding-bottom: 10px;
-  border-radius: 20px;
   margin-right: auto;
-  border: 20px solid black;
   color: blueviolet;
   font-family: "Oswald", sans-serif;
   font-size: 40px;
-  background-color: black;
+  text-align: center;
 
+}
+
+.text1 {
+  padding-bottom: 10px;
+  margin-top: 500px;
+  color: blueviolet;
+  font-family: "Oswald", sans-serif;
+  font-size: 40px;
+  text-align: center;
 }
